tests/neg/i2564.scala
object Foo {
  inline def bar = new Bar // error
  class Bar private[Foo]()
}
